# grid-diffusion

./: .gitignore  README.md  pyproject.toml
src/diffusion_learning/: __init__.py  app.py  diffusion.py  patterns.py
tests/: test_diffusion.py
