[project]
name = "diffusion-learning"
version = "0.1.0"
description = "Teach diffusion with tiny numeric grid images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "torch>=2.3",
]

[project.scripts]
diffusion-demo = "diffusion_learning.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
